feat: add first loading page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,24 @@
   }
 }
 
+html {
+  height: 100vh;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #FAFAFA;
+  height: 100%;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+
+.flex-all-center {
+  @apply flex flex-col items-center justify-center;
 }
