feat: add common component named by typo for render text

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,7 @@ body {
 .flex-all-center {
   @apply flex flex-col items-center justify-center;
 }
+
+.col-center {
+  @apply flex flex-col items-center;
+}
