--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,19 +17,17 @@
 }
 
 html {
-  height: 100vh;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: #FAFAFA;
   height: 100%;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  color: rgb(var(--foreground-rgb));
+  background: #FAFAFA;
+  height: 100%;
 }
 
 .flex-all-center {
