--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,11 @@
 
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
+}
+
+html, body, #__next {
+  height: 100%;
 }
 
 html {
@@ -29,10 +33,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
   color: rgb(var(--foreground-rgb));
   background: #FAFAFA;
-  height: 100%;
 }
 
 .flex-all-center {
@@ -49,4 +51,9 @@ body {
 
 .input {
   outline: none;
+}
+
+.header {
+  @apply h-[62px] w-full flex rounded-2xl bg-white px-[17px] items-center;
+  box-shadow: 0px 14px 30px 0px rgba(0, 0, 0, 0.05);
 }
