--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,13 @@ body {
   @apply h-[62px] w-full flex rounded-2xl bg-white px-[17px] items-center;
   box-shadow: 0px 14px 30px 0px rgba(0, 0, 0, 0.05);
 }
+
+.dialog-dimmed {
+  background: #D9D9D9;
+  opacity: 0.4;
+}
+
+.dialog-panel {
+  @apply min-w-[320px] px-[15px] py-[12px] rounded-[30px];
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.04);
+}
