--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,14 @@ body {
   @apply min-w-[320px] px-[15px] py-[12px] rounded-[30px];
   box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.04);
 }
+
+.gnb {
+  display: flex;
+  justify-content: center;
+  column-gap: 90px;
+  border-radius: 0rem 1.5rem 1.4375rem 1.4375rem;
+  background: #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 4px -14px 40px 0px rgba(255, 255, 255, 0.30);
+  height: 84px;
+  padding: 15px 32px;
+}
