--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,9 +72,10 @@ body {
   display: flex;
   justify-content: center;
   column-gap: 90px;
-  border-radius: 0rem 1.5rem 1.4375rem 1.4375rem;
+  border-radius: 30px 30px 0 0;
   background: #FFF;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 4px -14px 40px 0px rgba(255, 255, 255, 0.30);
+  box-shadow: 0px -5px 15px 0px rgba(0, 0, 0, 0.07);
+  /*box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 4px -14px 40px 0px rgba(255, 255, 255, 0.30);*/
   height: 84px;
   padding: 15px 32px;
 }
