--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,10 +97,14 @@ textarea {
 }
 
 .a4 {
-  width: 2480px;
-  height: 3508px;
+  /*width: 2480px;*/
+  /*height: 3508px;*/
+  width: 100%;
+  height: 100%;
   background: white;
   padding: 2em 5em;
+  /*transform: scale(0.25);*/
+  /*transform-origin: top left;*/
 }
 
 .letter-divider {
