--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,24 @@
   }
 }
 
+@media print {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    page-break-inside: avoid;
+  }
+
+  @page {
+    size: A4;
+    margin: 0;
+  }
+}
+
 
 * {
   box-sizing: border-box !important;
