--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,11 +136,11 @@ textarea {
 
 
 .MyPageLetterList {
-  @apply grid grid-cols-3 w-full pt-4 gap-4;
+  @apply grid grid-cols-3 w-full pt-4 gap-4 min-h-[120px]
+  max-h-[230px] md:max-h-[500px];
   overflow-y: scroll;
 }
 
 .MyPageLetterButton {
-  @apply p-4 border border-letter-yellow rounded-lg min-h-[120px]
-    max-h-[230px] md:max-h-[500px];
+  @apply p-4 border border-letter-yellow rounded-lg;
 }
