--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,3 +144,9 @@ textarea {
 .MyPageLetterButton {
   @apply p-4 border border-letter-yellow rounded-lg;
 }
+
+.ChatInputBox {
+  @apply
+    p-4 w-full h-[48px] rounded-lg drop-shadow-md flex items-center
+    bg-white;
+}
